Closed Bug 986357 Opened 10 years ago Closed 10 years ago

js/src/jsiter.cpp:1069:41: error: use of undeclared identifier 'GetShapeAttributes' (--disable-ion --disable-unified-compilation)

Categories

(Core :: JavaScript Engine, defect)

x86_64
FreeBSD
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla31
Tracking Status
firefox30 --- fixed
firefox31 --- fixed

People

(Reporter: jbeich, Assigned: jbeich)

References

Details

Attachments

(1 file)

js/src/jsiter.cpp:1069:41: error: use of undeclared identifier
      'GetShapeAttributes'
                                attrs = GetShapeAttributes(obj2, prop);
                                        ^
1 error generated.

js/src/jsiter.cpp: In function 'bool SuppressDeletedPropertyHelper(JSContext*, JS::HandleObject, StringPredicate)':
js/src/jsiter.cpp:1069:70: error: there are no arguments to 'GetShapeAttributes' that depend on a template parameter, so a declaration of 'GetShapeAttributes' must be available [-fpermissive]
                                 attrs = GetShapeAttributes(obj2, prop);
                                                                      ^
js/src/jsiter.cpp:1069:70: note: (if you use '-fpermissive', G++ will accept your code, but allowing the use of an undeclared name is deprecated)
js/src/jsiter.cpp: In instantiation of 'bool SuppressDeletedPropertyHelper(JSContext*, JS::HandleObject, StringPredicate) [with StringPredicate = {anonymous}::SingleStringPredicate; JS::HandleObject = JS::Handle<JSObject*>]':
js/src/jsiter.cpp:1137:77:   required from here
js/src/jsiter.cpp:1069:70: error: 'GetShapeAttributes' was not declared in this scope
js/src/jsiter.cpp: In instantiation of 'bool SuppressDeletedPropertyHelper(JSContext*, JS::HandleObject, StringPredicate) [with StringPredicate = {anonymous}::IndexRangePredicate; JS::HandleObject = JS::Handle<JSObject*>]':
js/src/jsiter.cpp:1170:82:   required from here
js/src/jsiter.cpp:1069:70: error: 'GetShapeAttributes' was not declared in this scope

http://buildbot.rhaalovely.net/builders/mozilla-aurora-sparc64/builds/366/steps/build/logs/stdio
Luke, Brian ? I dont know how this didnt surface when this code was in central, and only pops up since the last central->aurora migration.. but my aurora sparc64 builds are badly broken because of this.
Attached patch fixSplinter Review
--enable-unified-compilation is default on m-c. There're periodic --disable-unified-compilation runs but not together with --disable-ion. Unified build is currently configured to have 16 alphabetically sorted files in a single compilation unit. jsinfer.cpp and jsiter.cpp end up in the same unit while --enable-ion bootlegs the header like this:

    jsiter.cpp
    jsinferinlines.h
    jit/ExecutionModeInlines.h
    jsscriptinlines.h
    vm/Shape-inl.h
Attachment #8400857 - Flags: review?(bhackett1024)
Attachment #8400857 - Flags: review?(bhackett1024) → review+
Keywords: checkin-needed
--disable-ion is NPOTB and jsscriptinlines.h is already implicitly included in jsiter.cpp via two routes present in TBPL described in comment 3
Whiteboard: [checkin-needed-aurora] [npotb]
https://hg.mozilla.org/mozilla-central/rev/c8840a64aa0a
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: