Bug 986357 - Unbreak --disable-ion in non-unified mode after bug 695438. r=bhackett, a=NPOTB