js/src/jsiter.cpp
@@ -33,6 +33,7 @@
 
 #include "jsinferinlines.h"
 #include "jsobjinlines.h"
+#include "jsscriptinlines.h"
 
 #include "vm/Stack-inl.h"
 #include "vm/String-inl.h"
